--- a/Classe 3 - Spotify + Gephi/readme.me
+++ b/Classe 3 - Spotify + Gephi/readme.me
@@ -1,1 +1,2 @@
-
+Per fer ara: incloure gèneres musicals
+Per la setmana que ve: partir d'una playlist, agafar tots els artistes i fer els relacionats
