--- a/Classe 3 - Spotify + Gephi/readme.me
+++ b/Classe 3 - Spotify + Gephi/readme.me
@@ -1,2 +1,3 @@
-Per fer ara: incloure gèneres musicals
-Per la setmana que ve: partir d'una playlist, agafar tots els artistes i fer els relacionats. Primer saber si spotipy té alguna funció per fer-ho (sí que n'hi ha, playlist_item). 
+# CLASSE 3 - 27/02/2024
+
+Avui hem fet servir l'API d'Spotify per obtenir gèneres musicals i representar-los amb Gephi
