--- a/Classe 5 - Pandas/readme.me
+++ b/Classe 5 - Pandas/readme.me
@@ -1,1 +1,3 @@
-L'única cosa que falta és convertir el temps en el format de Youtube en una nova columna amb segons.
+# CLASSE 5 - 12/03/2024
+
+Hem fet servir Pandas per manipular datasets. L'exercici 2 el farem a la següent classe.
